Fixed some bugs with navigational bar, tweaked cards animation speed and spacing between them.

--- a/angular-app/src/app/components/main-page/main-page.component.css
+++ b/angular-app/src/app/components/main-page/main-page.component.css
@@ -109,14 +109,20 @@ nav{
   height: 400px;
   margin-left: 3%;
   margin-right: 3%;
-  margin-bottom: 1em;
-  margin-top: 1em;
+  margin-bottom: 5em;
 
 }
 
 .my-card-inner {
   width: 100%;
   height: 100%;
+
   background: white;
   box-shadow: 0 0.5em 0.5em 0 grey;
+}
+
+.cards {
+  height: auto;
+  width: 100%;
+  overflow: hidden;
 }
