--- a/angular-app/src/app/components/nav-bar/nav-bar.component.css
+++ b/angular-app/src/app/components/nav-bar/nav-bar.component.css
@@ -56,7 +56,7 @@ div{
   color: white;
 }
 .nav-item{
-  padding-left: 1em ;
+  padding-left: 2em;
   height: 100%;
   color: #919eba;
   cursor: pointer;
